# sortPictureReso

./: .buildconfig  .editorconfig  .gitignore  PictureSorter.py  Picture_Sorter.sh  README.md  SizeImageStorage.py  dev_env.sh  meson.build  picture-sorter.doap  pyproject.toml  requirements.txt  trie.sh
old/: Picture_Sorter.sh  README.md
sortpicturereso/: __main__.py  main.py
sortpicturereso/LibPictureSorter/: configPictureSorter.py  picturesorter.py  sizeimagestorage.py
src/: meson.build  pictureSorter.py  setup.py
src/LibPictureSorter/: __init__.py  configPictureSorter.py  picturesorter.py  sizeimagestorage.py
tests/: test_config_picture_sorter_image.py  test_size_image_storage.py
